@@ -4,6 +4,7 @@
   * Fixed change class bugs.
   * A model can now include 'QueryBuilder' (better interface between class and compiler).
   * Better defaults declaration.
+  * Added before_process and after_process hooks.
 
 == 0.6.0 2010-03-19
 
